@@ -18,6 +18,7 @@
 * Credorax: Update url gateway and credit cards [javierpedrozaing] #4417
 * Kushki: Pass extra_taxes with USD [therufs] #4426
 * DLocal: fix bug with `X-Idempotency-Key` header [dsmcclain] #4431
+* DLocal: Mark support for additional countries [gasb150] #4427
 
 == Version 1.126.0 (April 15th, 2022)
 * Moneris: Add 3DS MPI field support [esmitperez] #4373
